# trappy

./: .travis.yml  README.md  index.html  params.json  setup.cfg
api_reference/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  trappy.base.html  trappy.compare_runs.html  trappy.cpu_power.html  trappy.devfreq_power.html  trappy.dynamic.html  trappy.html  trappy.pid_controller.html  trappy.plot_utils.html  trappy.plotter.AbstractDataPlotter.html  trappy.plotter.AttrConf.html  trappy.plotter.ColorMap.html  trappy.plotter.Constraint.html  trappy.plotter.EventPlot.html  trappy.plotter.ILinePlot.html  trappy.plotter.ILinePlotGen.html  trappy.plotter.IPythonConf.html  trappy.plotter.LinePlot.html  trappy.plotter.PlotLayout.html  trappy.plotter.Utils.html  trappy.plotter.html  trappy.run.html  trappy.sched.html  trappy.stats.Aggregator.html  trappy.stats.Correlator.html  trappy.stats.Indexer.html  trappy.stats.SchedConf.html  trappy.stats.StatConf.html  trappy.stats.Topology.html  trappy.stats.Trigger.html  trappy.stats.grammar.html  trappy.stats.html  trappy.thermal.html  (+3 more)
doc/: BareTrace class.ipynb  IPlotter.ipynb  InteractivePlotter.ipynb  Plotter.ipynb  Stats.ipynb  XYPlot_DualPlotNorm_PowerPerfPlot.ipynb
tests/: test_base.py  test_copyright.py  test_fallback.py  test_ftrace.py  test_plot_utils.py  test_plotter.py  test_run.py  test_stats.py  test_systrace.py  test_thermal.py  trace_not_raw.txt
trappy/: __init__.py  bare_trace.py  base.py  cpu_power.py  devfreq_power.py  dynamic.py  fallback.py  ftrace.py  (+6 more)
(+98 files in other folders)
