[metadata]
name = TRAPpy
version = 6.0.0
author = ARM-TRAPPY
author_email = trappy@arm.com
description = Trace Analysis and Plotting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ARM-software/trappy
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Environment :: Console
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Topic :: System :: Operating System Kernels :: Linux
	Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.6
scripts =
	scripts/publish_interactive_plots.py
install_requires =
	numpy
	pyparsing
	pandas>=0.15.0
	future

[options.package_data]
trappy.plotter =
	js/EventPlot.js
	js/ILinePlot.js
	css/EventPlot.css
	css/EventPlot_help.jpg

[options.extras_require]
notebook =
	matplotlib>=1.3.1
	ipython>=3.0.0
	jupyter>=1.0.0

[upload_sphinx]
upload-dir = doc/api_reference/_build/html

[nosetests]
processes = -1
process-timeout = 60
